--- a/templates/settings/settings.html
+++ b/templates/settings/settings.html
@@ -180,15 +180,14 @@
                                             <div class="grid grid-cols-1 sm:grid-cols-6 gap-4 sm:gap-6">
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="first-name"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First
-                                                        Name</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
                                                     <input type="text" name="first-name" id="first-name"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="Bonnie" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="last-name"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Company
                                                         Name</label>
                                                     <input type="text" name="last-name" id="last-name"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
@@ -196,43 +195,45 @@
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="country"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Country</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
                                                     <input type="text" name="country" id="country"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="United States" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="city"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
                                                     <input type="text" name="city" id="city"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="e.g. San Francisco" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="address"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Years
+                                                        in business</label>
                                                     <input type="text" name="address" id="address"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="e.g. California" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="email"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">License
+                                                        number</label>
                                                     <input type="email" name="email" id="email"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="example@company.com" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="phone-number"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone
-                                                        Number</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">License
+                                                        state</label>
                                                     <input type="number" name="phone-number" id="phone-number"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="e.g. +(12)3456 789" required="">
                                                 </div>
                                                 <div class="col-span-1 sm:col-span-3">
                                                     <label for="birthday"
-                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Birthday</label>
+                                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Specialization</label>
                                                     <input type="number" name="birthday" id="birthday"
                                                         class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                                                         placeholder="15/08/1990" required="">
