--- a/templates/dashboard/components/navigation/navbar.html
+++ b/templates/dashboard/components/navigation/navbar.html
@@ -18,7 +18,7 @@
 
 
                 <!-- Breadcrumb -->
-                <nav class="flex justify-between" aria-label="Breadcrumb">
+                <nav class="hidden sm:flex justify-between" aria-label="Breadcrumb">
                     <ol class="inline-flex items-center mb-3 sm:mb-0">
                         <li>
                             <div class="flex items-center">
